[package]
name = "f411-async-dream"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.13"
stm32f4xx-hal = { version = "0.8.3", features = ["stm32f411", "rt"] }
cortex-m = "0.6.4"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[dependencies.async-embedded]
git = "https://github.com/rust-embedded-community/async-on-embedded"
rev = "aa43ccddffb8ba0460c49bcfe61cba24d966db6c"
